--- a/foundations/cascade/01-cascade-fix/style.css
+++ b/foundations/cascade/01-cascade-fix/style.css
@@ -36,8 +36,14 @@ body {
   font-size: 14px;
 }
 
+
 div.text {
   color: rgb(0, 0, 0);
   font-size: 22px;
   font-weight: 100;
+}
+
+div.text div.text.child{
+  font-size: smaller;
+  font-weight: 800;
 }
